--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "axios": "^0.26.1",
+    "lottie-ios": "^3.2.3",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-safe-area-context": "^4.2.1",
